[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-space-backup-restore"
dynamic = ["version"]
description = "Backup and restore individual Confluence Cloud spaces via REST API"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Malko", email = "davidmalko87@gmail.com" }]
requires-python = ">=3.10"
keywords = ["confluence", "backup", "restore", "atlassian", "confluence-cloud", "atlassian-cloud"]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.optional-dependencies]
ui = ["rich>=13.0"]
dev = ["pytest>=7.0", "ruff"]

[project.urls]
Homepage = "https://github.com/davidmalko87/confluence-space-backup-restore"
Repository = "https://github.com/davidmalko87/confluence-space-backup-restore"
Changelog = "https://github.com/davidmalko87/confluence-space-backup-restore/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/davidmalko87/confluence-space-backup-restore/issues"

[project.scripts]
confluence-backup = "confluence_tool.cli:main"

[tool.setuptools]
packages = ["confluence_tool"]

[tool.setuptools.dynamic]
version = { attr = "confluence_tool.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests import confluence_tool without an
# editable install (CI runs `pytest`, which otherwise wouldn't find the package).
pythonpath = ["."]
testpaths = ["tests"]
